Fixed issue with patient info widget alignment

--- a/portal/patient/css/patient.view.css
+++ b/portal/patient/css/patient.view.css
@@ -127,10 +127,10 @@ nav ul li button {
 .content-narrow-add, .content-narrow-remove,
 .content-wide-add, .content-wide-remove
 {
-    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.0s;
-    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.0s;
-    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.0s;
-    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.0s;
+    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
 }
 
 .oneHundredPxWide,
